[package]
name = "rblitz"
version = "0.1.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"
description = "legoland private server"
publish = false

[dependencies]
rblitz_packets = { git = "https://github.com/Veykril/rblitz_packets", rev = "ab94f5e" }
fern = { version = "0.5", features = ["colored"] }
log = "0.4.6"
enet-sys = { path = "./enet-sys" }
specs = "0.14.3"
shrev = "1.0.1"
shred = "0.7.1"
shred-derive = "0.5.1"
block-cipher-trait = "0.6.2"
block-modes = "0.2.0"
blowfish = "0.4.0"
toml = "0.4.10"
chrono = "0.4.6"
byteorder = "1.2.7"
indexmap = "1.0.2"
ron = "0.4.1"

[dependencies.serde]
version = "1.0.84"
features = ["derive"]
